fix(DO-378): make sure postgresql-client lib is in final image
Jira: https://motorefi.atlassian.net/browse/DO-378

--- a/ci/charts/sledger/values.yaml
+++ b/ci/charts/sledger/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: docker.motoinfra.com/sledger
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "fcf33b4482bfa18c9e213418598ad02d060f7df4"
+  tag: "tbd"
 imagePullSecrets:
   - name: nexus-repository-manager-docker-pull-secret
 
