fix(DO-378): mount sledger.yaml into default /ledger directory
Jira: https://motorefi.atlassian.net/browse/DO-378

--- a/ci/charts/sledger/templates/job.yaml
+++ b/ci/charts/sledger/templates/job.yaml
@@ -41,7 +41,7 @@ spec:
                 key: {{ .Values.databaseMigrationPassword.key }}
         volumeMounts:
         - name: sledger-file
-          mountPath: /sledger.yaml
+          mountPath: /ledger/sledger.yaml
           subPath: {{ .Values.sledgerFileConfigmap.key }}
       # GCP requires cloud-sql-proxy sidecar in order to access private db
       # This makes the db instance available on localhost
