fix(DO-378): updating chart and app version
Jira: https://motorefi.atlassian.net/browse/DO-378

--- a/ci/charts/sledger/values.yaml
+++ b/ci/charts/sledger/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: docker.motoinfra.com/sledger
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "tbd"
+  tag: "ed7f2db919f209bdeb4a636feacedfcdfb8f81b0"
 imagePullSecrets:
   - name: nexus-repository-manager-docker-pull-secret
 
