--- a/ci/charts/sledger/templates/job.yaml
+++ b/ci/charts/sledger/templates/job.yaml
@@ -10,6 +10,9 @@ metadata:
 spec:
   backoffLimit: 20
   template:
+    metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       restartPolicy: OnFailure
       shareProcessNamespace: true
