--- a/ci/workflows/build-sensor.yaml
+++ b/ci/workflows/build-sensor.yaml
@@ -60,7 +60,7 @@ spec:
                     - name: dockerfile-location
                       value: "Dockerfile"
                     - name: destination
-                      value: "docker.motoinfra.com"
+                      value: "us-east4-docker.pkg.dev/shared-svcs-prod-artifacts-e7/shared-svcs-docker-images"
                     - name: pr-context
                       value: "image-build"
           parameters:
